Visual fixes for Windows (#50)
* Refactor scroll handling to avoid double scrollbars on windows

* Prevent startup error on non-windows platforms

* Attempt to improve positioning and UI clutter on Windows

* Disable application menu on windows

Refs #43

We don't seem to need it for ctrl-c/v to work like on macOS, and
it looks quite awful right now.

I think we'll leave the frame for the time being, however; while
it won't look as nice as on macOS, implementing the close/minimize
buttons is more work than it's worth.

* Fix windows not being properly offset

Refs #43

--- a/app/css/main.less
+++ b/app/css/main.less
@@ -1,6 +1,7 @@
 // theming
 
 @message-bg-incoming: #f0f0f0;
+
 @read-indicator-avatar-size: 20px;
 @video-call-accent: #1D9C0D;
 
@@ -125,9 +126,17 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
-    overflow-y: scroll;
 
     padding-top: 8px;
+
+    .scroll-host {
+        overflow-y: scroll;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+    }
 }
 
 #loading {
